tests/output/self_hosted/leading_indent_with_comment_error.txt
tests/leading_indent_with_comment_error.oomph:2: error: should be function, class, union or typedef

        export func main():
    ^^^^

